--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-set-list/sw-settings-snippet-set-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-set-list/sw-settings-snippet-set-list.html.twig
@@ -154,7 +154,7 @@
                                                             class="sw-settings-snippet-set-file__column-changed-at"
                                                             sortable
                                                             :label="$tc('sw-settings-snippet.setList.columnChangedAt')"
-                                                            dataIndex="baseFile"
+                                                            dataIndex="createdAt"
                                                             sortable>
                                                 {% block sw_settings_snippet_set_list_card_list_grid_column_changed_date %}
                                                     <div v-if="item.updatedAt">{{ item.updatedAt | date }}</div>
