--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-detail/sw-settings-snippet-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-detail/sw-settings-snippet-detail.html.twig
@@ -53,8 +53,9 @@
                                                           :label="$tc('sw-settings-snippet.detail.labelName')"
                                                           :placeholder="$tc('sw-settings-snippet.detail.labelNamePlaceholder')"
                                                           v-model="translationKey"
-                                                          @input="debouncedTranslationKeyChange"
-                                                          :disabled="!isCreate && !isCustomState"
+                                                          @focus="onFocus"
+                                                          @blur="onBlurTranslationKeyChange"
+                                                          :disabled="!(isCreate || isCustomState)"
                                                           :errorMessage="invalidKeyErrorMessage">
                                                 </sw-field>
                                             {% endblock %}
