--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -35,6 +35,7 @@
                     @sw-category-on-refresh="onRefreshCategories"
                     @sw-category-on-duplicate="onDuplicateCategory"
                     @sw-category-on-reset-details="resetCategory"
+                    @sw-category-load-children="getCategories"
                 ></sw-category-tree>
             {% endblock %}
         </template>
