--- a/Resources/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.scss
+++ b/Resources/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.scss
@@ -1,4 +1,7 @@
 @import "~scss/variables";
+$sw-category-tree-border-color: $color-steam-cloud;
+$sw-category-tree-delete-color: $color-crimson;
+
 
 .sw-category-tree.sw-tree {
     background: $color-white;
@@ -10,13 +13,25 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        border-bottom: 1px solid $color-steam-cloud;
+        border-bottom: 1px solid $sw-category-tree-border-color;
         height: 64px;
         width: 100%;
 
-        .sw-category-tree-actions__headline {
-            color: $color-kashmir;
-            font-size: 18px;
+    }
+
+    .sw-category-tree-actions__headline {
+        display: grid;
+        color: $color-kashmir;
+        font-size: 18px;
+        padding: 21px 40px;
+        grid-template-columns: 1fr auto;
+        align-items: center;
+        border-bottom: 1px solid $sw-category-tree-border-color;
+
+        .sw-category-tree__batch-delete {
+            color: $sw-category-tree-delete-color;
+            font-size: 14px;
+            cursor: pointer;
         }
     }
 
@@ -24,7 +39,7 @@
         padding: 24px 16px;
         max-height: unset;
         min-height: unset;
-        height: calc(100% - 64px);
+        height: calc(100% - 66px);
     }
 
     .tree-link {
