NEXT-1149 - Change type of sw-field in the manufacture module

--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -54,7 +54,7 @@
                             {% endblock %}
 
                             {% block sw_manufacturer_detail_base_info_field_link %}
-                                <sw-field type="url"
+                                <sw-field type="text"
                                           :label="$tc('sw-manufacturer.detail.labelLink')"
                                           :placeholder="$tc('sw-manufacturer.detail.placeholderLink')"
                                           name="link"
