--- a/Resources/administration/src/app/component/base/sw-modal/sw-modal.scss
+++ b/Resources/administration/src/app/component/base/sw-modal/sw-modal.scss
@@ -1,6 +1,7 @@
 @import "~scss/variables";
 
 $sw-modal-color-backdrop:             rgba(0, 0, 0, 0.4);
+$sw-modal-gap:                        64px;
 $sw-modal-z-index:                    $z-index-modal;
 $sw-modal-loader-z-index:             $sw-modal-z-index + 1;
 $sw-modal-dialog-color-background:    $color-white;
@@ -19,7 +20,6 @@ $sw-modal-transition-timing-function: cubic-bezier(.68, -0.55, .26, 1.55);
     right: 0;
     bottom: 0;
     left: 0;
-    padding: 40px 20px;
     height: 100%;
     width: 100%;
     overflow-x: hidden;
@@ -27,13 +27,22 @@ $sw-modal-transition-timing-function: cubic-bezier(.68, -0.55, .26, 1.55);
     background-color: $sw-modal-color-backdrop;
     z-index: $sw-modal-z-index;
     outline: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 
     .sw-modal__dialog {
-        margin: 0 auto;
         background-color: $sw-modal-dialog-color-background;
         border-radius: $sw-modal-border-radius;
         color: $sw-modal-color-text;
+        max-height: calc(100vh - #{$sw-modal-gap});
+        max-width: calc(100vw - #{$sw-modal-gap});
+        min-height: 200px;
+        width: 100%;
         outline: none;
+        display: flex;
+        flex-direction: column;
     }
 
     &.sw-modal--default .sw-modal__dialog {
@@ -56,6 +65,8 @@ $sw-modal-transition-timing-function: cubic-bezier(.68, -0.55, .26, 1.55);
             border-radius: 0;
             display: grid;
             height: 100%;
+            width: 100%;
+            max-height: 100%;
             grid-template-rows: auto 1fr auto;
         }
 
@@ -109,9 +120,10 @@ $sw-modal-transition-timing-function: cubic-bezier(.68, -0.55, .26, 1.55);
     }
 
     .sw-modal__body {
-        word-break: break-word;
+        overflow-y: auto;
         padding: 20px 30px;
         position: relative;
+        word-break: break-word;
     }
 
     .sw-modal__footer {
