--- a/Resources/administration/src/module/sw-navigation/component/sw-navigation-tree/sw-navigation-tree.html.twig
+++ b/Resources/administration/src/module/sw-navigation/component/sw-navigation-tree/sw-navigation-tree.html.twig
@@ -2,6 +2,7 @@
     <sw-tree class="sw-navigation-tree"
         :items="navigations"
         :sortable="true"
+        :createFirstItem="createNewNavigation"
         :searchable="false"
         @sw-tree-on-drag-end="onUpdatePositions"
         @getTreeItems="loadNavigation">
@@ -12,8 +13,7 @@
                     v-for="(item, index) in treeItems"
                     :key="item.id"
                     :item="item"
-                    :sortable="true"
-                    :draggedItem="draggedItem">
+                    :sortable="true">
 
                     {% block sw_navigation_tree_items_content %}
                         <template slot="content" slot-scope="{ item }">
