NEXT-637 - Fixed a bug in the pagination and make it only visible if there are enough items

--- a/Resources/administration/src/app/component/form/sw-select-field/sw-select-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-select-field/sw-select-field.html.twig
@@ -6,6 +6,7 @@
                     :disabled="disabled"
                     :class="{ 'is--placeholder': currentValue === null }"
                     @input="onInput"
+                    @change="onChange"
                     v-if="($slots.default && $slots.default.length > 0) || (options && options.length > 0)"
                     v-bind="$attrs"
                     :value="value">
